--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
     "react/no-unused-prop-types": [0],
     "react/prefer-stateless-function": [0],
     "jsx-a11y/no-static-element-interactions": [0],
-    "no-return-assign": [0]
+    "no-return-assign": [0],
+    "linebreak-style": ["error", "windows"]
   },
   "env": {
     "browser": true
