#LINKAPP-27#add antd-mobile support

--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
   "plugins": [
     [
       "import", {
-        "libraryName": "antd",
+        "libraryName": "antd-mobile",
         "style": true
       }
     ],
