--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "keywords": [],
   "dependencies": {
     "antd": "^2.12.4",
+    "antd-mobile": "^1.6.7",
     "axios": "^0.16.2",
     "babel-runtime": "^6.23.0",
     "classnames": "^2.2.5",
@@ -45,7 +46,7 @@
     "babel-loader": "^6.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-dva-hmr": "^0.3.2",
-    "babel-plugin-import": "^1.1.0",
+    "babel-plugin-import": "^1.4.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
